# Genia

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/books/: processed_Automatize Tarefas Maçantes com Python.txt  processed_Curso_Intensivo_de_Python_Uma_-_Eric_Mat-1.txt  processed_Data Science do zero Primeiras regras com o Python.txt  processed_Pense em Python ( PDFDrive )_230220_215535.txt
model/: content_ranker.py  dataset_cleaner.py
scrapper/: web_scrapper.py
utils/: pre_processing.py
