[tool.poetry]
name = "projeto-aprendizagem-continua"
version = "0.1.0"
description = ""
authors = ["Miguel Claudino"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightgbm = "^4.5.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.0.0"
nltk = "^3.9.1"
spacy = "^3.8.2"
pypdf2 = "^3.0.1"
psutil = "^6.0.0"
numba = "^0.60.0"
pyopencl = "^2024.2.7"
siphash24 = "^1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
